Fix openGLrelated artifacts when canceling the LoD0 stroke

See a comment in KisTextureTile::update()

BUG:353754
Fixes T2362